Actions
Bug #20982
closedInconsistency between Hash#inspect and ENV.inspect in Ruby 3.4
Bug #20982:
Inconsistency between Hash#inspect and ENV.inspect in Ruby 3.4
Description
Ruby 3.4 changed the stringified output of Hash to add whitespace to the hashrockets
The output of ENV.inspect is very similar to Hash#inspect, but does not include the whitespace
Adding the extra whitespace around the hashrockets would improve the readability, and make things more consistent.
Updated by nobu (Nobuyoshi Nakada) over 1 year ago
- Tracker changed from Feature to Bug
- Backport set to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: REQUIRED
Updated by nobu (Nobuyoshi Nakada) over 1 year ago
- Status changed from Open to Closed
Applied in changeset git|c6dbb10b7408cab17f170f0b23d1bbf0db03ad55.
[Bug #20982] Put spaces in ENV.inspect results as well as Hash
Updated by k0kubun (Takashi Kokubun) over 1 year ago
Cherry-picking c6dbb10b7408cab17f170f0b23d1bbf0db03ad55 to ruby_3_4 caused a conflict. Could you file a PR that resolves it?
Updated by k0kubun (Takashi Kokubun) over 1 year ago
- Backport changed from 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: REQUIRED to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: DONE
ruby_3_4 24f48c83e7e851a6ca712fc7b498634da9a24789.
Updated by k0kubun (Takashi Kokubun) over 1 year ago
Thanks for the PR.
Actions