[Bug #20982] Put spaces in `ENV.inspect` results as well as `Hash`